# OptPilot

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.agents/optpilot-assistant/: README.md
.agents/optpilot-assistant/implementation/: bridge.md
.agents/optpilot-assistant/prompts/: system.md
.agents/skills/connect-github-integration/: SKILL.md
.github/workflows/: ci.yml  docs.yml
catalog/: __init__.py
catalog/example_package/: README.md  __init__.py
catalog/example_package/environments/: __init__.py
catalog/example_package/methods/: __init__.py  job_shop_lib_solvers.py
catalog/example_package/studies/: job_shop_dispatch_rule_baseline.yaml  job_shop_lib_dispatching_rule.yaml  (+9 more)
design/: configuration-model.md  job-shop-example-overhaul-design.md
designs/: pypi-core-and-studio-install-split.md
docs/: assistant.md  autoie_lab_config_assessment.md  candidate-contracts.md  catalog.md  concept_and_requirements.md  concepts.md  config_files.md  config_files_v3alpha.md  configuration-model.md  configuration.md  cp-sat-methods.md  development.md  devs-gen-simulation-environments.md  dispatching-rule-methods.md  evidence.md  examples.md  getting-started.md  getting_started.md  how-it-works.md  index.md  installation.md  interface_config_design.md  job-shop-environment.md  llm-code-methods.md  llm-heuristic-methods.md  method_runtime_redesign.md  methods.md  optpilot-assistant-design.md  platform-ui-design.md  platform-ui-implementation-plan.md  platform_design_and_roadmap.md  reinforcement-learning-methods.md  release_checklist.md  self_contained_design.md  simulated-annealing-methods.md  strategic-airlift-devs.md  studio-workspaces.md  study_spec_v1.md  ui.md  ui_overhaul_design.md  (+4 more)
examples/: README.md  __init__.py  bad_targets.py
examples/environments/: toy_factory.yaml  toy_factory_cli.yaml
examples/instances/: toy_factory_case.yaml
examples/methods/: evidence_aware_controller.yaml  evidence_aware_method.yaml  fixed_parameter_engine.yaml  fixed_parameter_method.yaml  job_shop_lib_solvers.py  lifecycle_fixed_parameter_engine.yaml  lifecycle_fixed_parameter_method.yaml  reference_random_search.yaml
examples/opt_devs_gen_sims/: README.md  __init__.py
examples/studies/: job_shop_dispatch_rule_baseline.yaml  job_shop_lib_dispatching_rule.yaml  job_shop_local_heuristic_search.yaml  job_shop_openai_dispatch_rule.yaml  job_shop_ortools_cpsat.yaml  job_shop_rl_stable_baselines.yaml  job_shop_rule_parameters_baseline.yaml  job_shop_simulated_annealing.yaml  job_shop_solver_code_baseline.yaml  sa_baseline.yaml  sa_openai_file_editor.yaml  toy_cli_random_search.yaml  toy_evidence_aware_controller.yaml  toy_evidence_aware_method.yaml  toy_lifecycle_engine.yaml  toy_lifecycle_method.yaml  toy_random_search.yaml  toy_user_engine.yaml
examples/user_controllers/: __init__.py  evidence_aware_controller.py
examples/user_engines/: __init__.py  code_artifact_engine.py  fixed_parameter_engine.py  lifecycle_fixed_engine.py
examples/user_methods/: __init__.py  evidence_aware_method.py  fixed_parameter_method.py  lifecycle_fixed_method.py
resource/: README.md  optpilot-assistant-design.md  platform-ui-design.md  platform-ui-implementation-plan.md  studio-folder-management.md
scripts/: smoke_test.sh
src/optpilot/: __init__.py  adapters.py  agent.py  artifacts.py  candidate_files.py  candidate_materialization.py  cli.py  code_artifacts.py  config.py  container_utils.py  controllers.py  engine_runtime.py  engines.py  environment.py  evidence.py  execution.py  importers.py  interfaces.py  method_runtime.py  method_worker.py  methods.py  models.py  package_index.py  package_validation.py  provenance.py  registry.py  run_sources.py  runner.py  scheduler.py  schema_validation.py  setup.py  spec.py  storage.py  worker.py
studio/: README.md  pyproject.toml
studio/src/optpilot_studio/: __init__.py  agent.py  cli.py
studio/src/optpilot_studio/assistant_assets/: README.md
studio/src/optpilot_studio/docs_assets/: assistant.md  candidate-contracts.md  concepts.md  configuration.md  cp-sat-methods.md  development.md  dispatching-rule-methods.md  evidence.md  examples.md  getting-started.md  how-it-works.md  index.md  job-shop-environment.md  llm-code-methods.md  methods.md  reinforcement-learning-methods.md  studio-workspaces.md  ui.md
studio/src/optpilot_studio/ui/: server.py
tests/: test_mvp.py
tests/fixtures/: bad_targets.py
user_catalog/: README.md  __init__.py
user_catalog/environments/: __init__.py
user_catalog/methods/: __init__.py
(+673 files in other folders)
