[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "optpilot"
version = "0.1.0"
description = "An orchestrator for AI-assisted optimization studies over target environments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "OptPilot contributors"},
]
keywords = [
  "optimization",
  "experiments",
  "evaluation",
  "evidence",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
optpilot = "optpilot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
